# observatory

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  =0.27.0  Dockerfile  PEER_REVIEW_PAPER_v2.md  PROJECTION_MODES.md  RESEARCH_PAPER_NARRATIVES.md  TELESCOPE_PAPER_PEER_REVIEW.md  VALIDATION_COMPARISON_REPORT.md  VALIDITY_STUDY_REPORT.md  api_alerts.py  api_analytics.py  api_comparison.py  api_comprehensive_report.py  api_extensions.py  api_file_upload.py  api_force_field.py  api_observer.py  api_observer_chat.py  api_research.py  api_site_analysis.py  api_trajectory.py  cbr_experiment.py  comprehensive_research_tests.py  experiment_tracker.py  extended_validation_results.json  final_validation_results.json  main.py  mcp_server.py  mcp_server_sse.py  narrative_auditor.py  narrative_extractor.py  new_validation_results.json  observer_mcp.py  page_categorizer.py  pyproject.toml  reproducibility.py  requirements.txt  research_agent.py  research_session_report.md  research_validity_study.py  (+6 more)
backend/analysis/: __init__.py  force_field.py  mode_classifier.py  robustness.py  soliton_detector.py  trajectory.py
backend/data/: ai_self_observation_results.json  alerts.json  attractor_detractor_training.json  calibration_report.json  capability_report_20260107_161250.json  hope_effect_analysis_20260107_173917.json  research_paper_20260107_164321.json  research_report_20260107_163707.json  research_study_20260107_172359.json  research_study_20260107_172502.json  research_study_20260107_172559.json  (+3 more)
backend/deployment/: README.md  (+12 more)
(+374 files in other folders)
