[project]
name = "mcp-server-observatory"
version = "0.1.0"
description = "MCP server for the Cultural Soliton Observatory - lens into LLM latent space"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-observatory = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
